# lr_fulltext_search_rust

./: Cargo.toml  Dockerfile  Makefile  README.md  config.toml
compose/: config.toml  docker-compose.yml
src/: main.rs
src/adapter/: mod.rs  router.rs
src/application/: wire_helper.rs
src/application/executor/: book_operator.rs
src/domain/gateway/: book_manager.rs
src/domain/model/: book.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/search/: es.rs  mod.rs
