[package]
name = "lr_fulltext_search_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lr_ft_books"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = "0.7.5"
elasticsearch = "8.5.0-alpha.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
